Fixes&Debuffs to HRE

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -7,51 +7,52 @@
  BOH_neutrality_DEF:0 "the Holy Roman Empire"
  BOH_communism:0 "Bohemian Union"
  BOH_communism_DEF:0 "the Bohemian Union"
- BOH_marxism_n:0 "Bohemian Union"
- BOH_holy_roman_union:0 "Union of Holy Roman Republics"
- BOH_holy_roman_union_DEF:0 "the Union of Holy Roman Republics"
- BOH_holy_roman_federation:0 "Holy Roman Federation"
- BOH_holy_roman_federation_DEF:0 "the Holy Roman Federation"
- BOH_holy_roman_federation_ADJ:0 "Holy Roman"
- BOH_marxism_n_DEF:0 "the Bohemian Union"
- BOH_marxism_leninism:0 "Holy Roman People's Republic"
- BOH_marxism_leninism_DEF:0 "the Holy Roman People's Republic"
- BOH_com_east_germany:0 "East German Workers Union"
- BOH_com_east_germany_n_DEF:0 "the East German Workers Union"
+ BOH_holy_roman_union:0 "Union of Socialist Roman Republics"
+ BOH_holy_roman_union_DEF:0 "the Union of Socialist Roman Republics"
+ BOH_holy_roman_union_ADJ:0 "Roman"
+ BOH_holy_roman_federation:0 "Roman Workers Republic of Bohemia"
+ BOH_holy_roman_federation_DEF:0 "the Roman Workers Republic of Bohemia"
+ BOH_holy_roman_federation_ADJ:0 "Bohemian"
+ BOH_marxism_n:0 "Workers Union of Bohemia"
+ BOH_marxism_n_DEF:0 "the Workers Union of Bohemia"
+ BOH_marxism_n_ADJ:0 "Bohemian"
+ BOH_marxism_leninism:0 "Bohemian SFRR"
+ BOH_marxism_leninism_DEF:0 "the Socialist Federative Roman Republic of Bohemia"
+ BOH_marxism_leninism_ADJ:0 "Bohemian"
+ BOH_com_east_germany:0 "East German Union"
+ BOH_com_east_germany_n_DEF:0 "the East German Union"
  BOH_fascism_ADJ:0 "Bohemian"
  BOH_democratic_ADJ:0 "Bohemian"
  BOH_neutrality_ADJ:0 "Bohemian"
  BOH_communism_ADJ:0 "Bohemian"
- BOH_marxism_n_ADJ:0 "Bohemian"
- BOH_marxism_leninism_ADJ:0 "Bohemian"
+
  BOH_com_east_germany_ADJ:0 "East German"
- BOH_holy_roman_union_ADJ:0 "Holy Roman"
  BOH:0 "Bohemia"
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
  BOH_purge_opponents:0 "Purge Opponents"
- BAV_holy_roman_federation:0 "Bavarian HRR"
+ BAV_holy_roman_federation:0 "Bavarian RWR"
  BAV_holy_roman_federation_DEF:0 "the Holy Roman Republic of Bavaria"
  BAV_holy_roman_federation_ADJ:0 "Bavarian"
- BAD_holy_roman_federation:0 "HRR of Baden-Württemberg"
+ BAD_holy_roman_federation:0 "RWR of Baden-Württemberg"
  BAD_holy_roman_federation_DEF:0 "the Holy Roman Republic of Baden-Württemberg"
  BAD_holy_roman_federation_ADJ:0 "Badisch-Württembergisch"
- TRC_holy_roman_federation:0 "Renish HRR"
+ TRC_holy_roman_federation:0 "Renish RWR"
  TRC_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Rhine"
  TRC_holy_roman_federation_ADJ:0 "Bavarian"
- TRC_holy_roman_federation:0 "Renish HRR"
+ TRC_holy_roman_federation:0 "Renish RWR"
  TRC_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Rhine"
  TRC_holy_roman_federation_ADJ:0 "Bavarian"
- NTE_holy_roman_federation:0 "North German HRR"
+ NTE_holy_roman_federation:0 "North German RWR"
  NTE_holy_roman_federation_DEF:0 "the Holy Roman Republic of the North Germany"
  NTE_holy_roman_federation_ADJ:0 "North German"
- TPR_holy_roman_federation:0 "Brandenburg-Pomeranian HRR"
+ TPR_holy_roman_federation:0 "Brandenburg-Pomeranian RWR"
  TPR_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Brandenburg-Pomerania"
  TPR_holy_roman_federation_ADJ:0 "Brandenburg-Pomeranian"
- PRS_holy_roman_federation:0 "Prussian HRR"
+ PRS_holy_roman_federation:0 "Prussian RWR"
  PRS_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Prussia"
  PRS_holy_roman_federation_ADJ:0 "Prussian"
- AUS_holy_roman_federation:0 "Austrian HRR"
+ AUS_holy_roman_federation:0 "Austrian RWR"
  AUS_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Austria"
  AUS_holy_roman_federation_ADJ:0 "Austrian"
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
@@ -320,8 +321,8 @@ BOH_reopening_our_economy:0 "Reopening our economy"
 BOH_demand_prussia:0 "The Prussian Expedition"
 bohemian_communist_propaganda:0 "Bohemian Communist Propaganda"
 bohemian_communist_propaganda_desc:0 "The Bohemians are spreading communist propaganda throughout our country!"
-BOH_has_marxism:0 "§!§!Your country's name will change to §YBohemian Union§!."
-BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YHoly Roman People's Republic§!."
+BOH_has_marxism:0 "§!§!Your country's name will change to §YWorkers Union of Bohemia§!."
+BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YSocialist Federative Roman Republic of Bohemia§!."
 BOH_com_political_reforms_focus:0 "Political Reforms"
 BOH_reopening_our_economy_focus:0 "Reopen our economy"
 ohe.1.title:0 "Kaiser Influence"
@@ -439,7 +440,7 @@ ohe.30.a:0 "Our nations will prosper united!"
 ohe.30.b:0 "We will not surrender our independence!"
 ohe.31.title:0 "Pomerania has agreed!"
 ohe.31.desc:0 "Pomerania agrees that a greater union between our countries will lead to better conditions in both our countries."
-ohe.31.a:0 "Let us declare the §YEast German Workers Union§!!"
+ohe.31.a:0 "Let us declare the §YEast German Union§!!"
 ohe.32.title:0 "Pomerania has declined!"
 ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
 ohe.32.a:0 "Mobilize against Pomerania!"
@@ -501,7 +502,7 @@ BOH_air_doctrine_experiments_desc:0 ""
 BOH_small_arms_production:0 "Small Arms Production"
 BOH_partially_recovered:0 "Partially Recovered"
 BOH_nearly_recovered:0 "Nearly Recovered"
-BOH_fully_recovered:0 "A Socalist Ecocomy"
+BOH_fully_recovered:0 "A Socialist Ecocomy"
 BOH_com_reunited:0 "Reunited under Communism"
 BOH_march_to_hamburg:0 "March to Hamburg"
 BOH_deal_with_mackensen:0 "Deal with Mackensen"
