--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -18,8 +18,8 @@
  marxism_desc:0 "Encompassing a broad spectrum of economic and historical views, Marxist politics seek to apply the theories of Karl Marx to political practice. Class struggle and the need for transition to a society based on common ownership of the means of production characterize these ideologies."
  leninism:0 "Leninism"
  leninism_desc:0 "A political ideology based in Marxist thought, Leninism seeks to establish a socialist state by a vanguard party leading a revolution overthrowing capitalist society. Once in power, the party rules through a system whereby policies are open for internal debate until a decision has been made."
- marxleninism:0 "Marxism-Leninism"
- marxleninism_desc:0 "Marxism-Leninism emphasizes rapid industrialization and collectivization as well as the need for a strong, authorative socialist state to purge any counter-revolutionary elements."
+ stalinism:0 "Marxism-Leninism"
+ stalinism_desc:0 "Marxism-Leninism emphasizes rapid industrialization and collectivization as well as the need for a strong, authorative socialist state to purge any counter-revolutionary elements."
  anti_revisionism:0 "Anti-Revisionism"
  anti_revisionism_desc:0 "A reaction to the many ideologies claiming to be successors to Marxism, Anti-Revisionism advocates retaining key elements of original revolutionary theory. Mainly opposing incorporation of capitalist economic elements into socialist states, the ideology is defined as much by what it isn't as what it is."
  anarchist_communism:0 "Anarchist Communism"
@@ -703,10 +703,10 @@
  BOH_fascism_party_long:0 "Bohemian National Fascist Party"
  BOH_democratic_party:0 "BDSP"
  BOH_democratic_party_long:0 "Bohemian Democratic Socialist Party"
- BOH_communism_party:0 "BSWP"
- BOH_communism_party_long:0 "Socialist Workers Party of Bohemia"
- BOH_communism_party_roman:0 "HRCP"
- BOH_communism_party_roman_long:0 "Holy Roman Communist Party"
+ BOH_marxism_n_party:0 "BSWP"
+ BOH_marxism_n_party_long:0 "Socialist Workers Party of Bohemia"
+ BOH_communism_party:0 "RUCP"
+ BOH_communism_party_long:0 "Roman Union Communist Party"
  NTE_neutrality_party:0 "Military Junta"
  NTE_neutrality_party_long:0 "Mackensen's Military Junta"
  NTE_democratic_party:0 "NGLP"
