Fixes to events and Updates to focus

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -482,6 +482,30 @@ ohe.41.title:0 "Worker Strikes"
 ohe.41.desc:0 "Reports of widespread strikes struck the news today. It appears they're demanding an improvement in worker conditions and rights; and, some are even protesting our government, calling for a more socialist government."
 ohe.41.a:0 "This will blow over."
 ohe.41.b:0 "Crackdown on strikes."
+ohe.42.title:0 "German Workers demand the Rhineland"
+ohe.42.desc:0 "Since our nation's founding, we've always been a heavily industrialized society. The Rhineland consisting of many dense industrial zones, giving us a massive economy. However, the conglomerate of workers in the east have demanded the return of the Rhenish industries. They have also been dropping propaganda pamplets from airplanes for the past couple of weeks now. What will we do?"
+ohe.42.a:0 "Cave to their demands..."
+ohe.42.b:0 "Deny their ultimatum, we will not give up peacefully!"
+ohe.42.c:0 "Deny their ultimatum and ask the French for help"
+ohe.43.title:0 "The Rhineland has accepted our Ultimatum"
+ohe.43.desc:0 "The Rhineland has caved to our demands. We now control all of their territory."
+ohe.43.a:0 "Great!"
+ohe.44.title:0 "The Rhineland has denied our Ultimatum"
+ohe.44.desc:0 "The Rhineland has denied our demands. What will we do next?"
+ohe.44.a:0 "Mobilize our troops!"
+ohe.44.b:0 "Back down..."
+ohe.45.title:0 "France protects the Rhineland!"
+ohe.45.desc:0 "The Rhineland has denied our demands, and the French have also guaranteed them. What will we do next?"
+ohe.45.a:0 "Declare war anyway!"
+ohe.45.b:0 "Back down, we don't want to risk it..."
+ohe.46.title:0 "The French-Rhenish Defense Alliance"
+ohe.46.desc:0 "Tensions between the East German Union and Rhenish have been increasing drastically over the past several months. Yesterday, French and Rhenish officials declared a formal defense pact with each other. They guarantee to come to each other's aid in the case of an armed conflict."
+ohe.46.a:0 "Hopefully this will deter them."
+ohe.46.b:0 "You can't stop the Workers Revolution!"
+ohe.47.title:0 "A French-Rhenish Alliance?"
+ohe.47.desc:0 "Tensions between the East German Union and Rhenish have been increasing drastically over the past several months. The Rhenish government has come to us stating the Germans are demanding an annexation of their government. The Rhenish are requesting a defensive alliance in order to deter the Germans."
+ohe.47.a:0 "Hopefully this will deter them."
+ohe.47.b:0 "We have our own problems..."
 BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUnion of Holy Roman Republics§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
 BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
