--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -703,8 +703,8 @@
  BOH_fascism_party_long:0 "Bohemian National Fascist Party"
  BOH_democratic_party:0 "BDSP"
  BOH_democratic_party_long:0 "Bohemian Democratic Socialist Party"
- BOH_marxism_n_party:0 "BSWP"
- BOH_marxism_n_party_long:0 "Socialist Workers Party of Bohemia"
+ BOH_marxism_party:0 "BSWP"
+ BOH_marxism_party_long:0 "Socialist Workers Party of Bohemia"
  BOH_communism_party:0 "RUCP"
  BOH_communism_party_long:0 "Roman Union Communist Party"
  NTE_neutrality_party:0 "Military Junta"
