Added HRE annexation events for Rhine&prussia

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -506,6 +506,17 @@ ohe.47.title:0 "A French-Rhenish Alliance?"
 ohe.47.desc:0 "Tensions between the East German Union and Rhenish have been increasing drastically over the past several months. The Rhenish government has come to us stating the Germans are demanding an annexation of their government. The Rhenish are requesting a defensive alliance in order to deter the Germans."
 ohe.47.a:0 "Hopefully this will deter them."
 ohe.47.b:0 "We have our own problems..."
+ohe.48.title:0 "Bohemia demands Annexation"
+ohe.48.desc:0 "The Bohemians sent a message to us demanding our peaceful annexation. They do have a substantial amount of influence in our country, what should we say?"
+ohe.48.a:0 "Accept their demands..."
+ohe.48.b:0 "We will fight to the end!"
+ohe.49.title:0 "Prussia accepts Annexation"
+ohe.49.desc:0 "To our suprise, the Prussian military have accepted annexation. Their officials wrote to us saying they do not want to cause unnecessary blodshed."
+ohe.49.a:0 "Great!"
+ohe.50.title:0 "Prussia denies Annexation"
+ohe.50.desc:0 "The Prussian military has denied our demands for annexation. Their officials wrote to us saying they will not simply give up their annexation without a fight."
+ohe.50.a:0 "Launch the Prussian Expedition!"
+ohe.50.b:0 "Back down..."
 BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUnion of Holy Roman Republics§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
 BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
