Communist path fixes

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -517,9 +517,11 @@ ohe.50.title:0 "Prussia denies Annexation"
 ohe.50.desc:0 "The Prussian military has denied our demands for annexation. Their officials wrote to us saying they will not simply give up their annexation without a fight."
 ohe.50.a:0 "Launch the Prussian Expedition!"
 ohe.50.b:0 "Back down..."
-BOH_proclaim_holy_roman_union:0 "§!§!Your country's name will change to §YUnion of Holy Roman Republics§!."
+BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
+
+BOH_proclaim_holy_roman_union:0 "§!§RRequires focus §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
-BOH_proclaim_holy_roman_federation:0 "§!§!Your country's name will change to §YHoly Roman Federation§!."
+BOH_proclaim_holy_roman_federation:0 "§!§RRequires focus §YMarxism§!§!§!."
 BOH_proclaim_holy_roman_federation2:0 "§!§RThis focus will release §YHoly Roman§! core states except §YBohemia§!§!§!."
 form_hre_union:0 "Controls all §YHoly Roman§! claimed states§!§!§!§!."
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
