Focus Icons & Focus Changes

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -19,8 +19,8 @@
  BOH_marxism_leninism:0 "Bohemian SFRR"
  BOH_marxism_leninism_DEF:0 "the Socialist Federative Roman Republic of Bohemia"
  BOH_marxism_leninism_ADJ:0 "Bohemian"
- BOH_com_east_germany:0 "East German Union"
- BOH_com_east_germany_n_DEF:0 "the East German Union"
+ BOH_com_east_germany:0 "East German Workers Union"
+ BOH_com_east_germany_n_DEF:0 "the East German Workers Union"
  BOH_fascism_ADJ:0 "Bohemian"
  BOH_democratic_ADJ:0 "Bohemian"
  BOH_neutrality_ADJ:0 "Bohemian"
@@ -30,6 +30,8 @@
  BOH:0 "Bohemia"
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
+BOH_proclaim_the_holy_roman_union:0 "Proclaim the USRR"
+BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Roman Workers Republics"
  BOH_purge_opponents:0 "Purge Opponents"
  BAV_holy_roman_federation:0 "Bavarian RWR"
  BAV_holy_roman_federation_DEF:0 "the Holy Roman Republic of Bavaria"
@@ -37,12 +39,9 @@
  BAD_holy_roman_federation:0 "RWR of Baden-Württemberg"
  BAD_holy_roman_federation_DEF:0 "the Holy Roman Republic of Baden-Württemberg"
  BAD_holy_roman_federation_ADJ:0 "Badisch-Württembergisch"
- TRC_holy_roman_federation:0 "Renish RWR"
+ TRC_holy_roman_federation:0 "Rhenish RWR"
  TRC_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Rhine"
- TRC_holy_roman_federation_ADJ:0 "Bavarian"
- TRC_holy_roman_federation:0 "Renish RWR"
- TRC_holy_roman_federation_DEF:0 "the Holy Roman Republic of the Rhine"
- TRC_holy_roman_federation_ADJ:0 "Bavarian"
+ TRC_holy_roman_federation_ADJ:0 "Rhenish"
  NTE_holy_roman_federation:0 "North German RWR"
  NTE_holy_roman_federation_DEF:0 "the Holy Roman Republic of the North Germany"
  NTE_holy_roman_federation_ADJ:0 "North German"
@@ -279,7 +278,8 @@ BOH_marxismleninism:0 "Marxism–Leninism"
 BOH_marxismleninism_desc:0 ""
 BOH_marxism:0 "Marxism"
 BOH_marxism_desc:0 ""
-BOH_approach_pomerania:0 "Approach Pomerania"
+BOH_approach_pomerania:0 "Approach Brandenburg-Pomerania"
+BOH_approach_pomerania_tooltip:0 "If they accept, we can form the §YEast German Workers Union§!."
 BOH_approach_pomerania_desc:0 ""
 BOH_the_bavarian_issue:0 "The Bavarian Issue"
 BOH_the_bavarian_issue_desc:0 ""
@@ -440,7 +440,7 @@ ohe.30.a:0 "Our nations will prosper united!"
 ohe.30.b:0 "We will not surrender our independence!"
 ohe.31.title:0 "Pomerania has agreed!"
 ohe.31.desc:0 "Pomerania agrees that a greater union between our countries will lead to better conditions in both our countries."
-ohe.31.a:0 "Let us declare the §YEast German Union§!!"
+ohe.31.a:0 "Let us declare the §YEast German Workers Union§!!"
 ohe.32.title:0 "Pomerania has declined!"
 ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
 ohe.32.a:0 "Mobilize against Pomerania!"
@@ -499,11 +499,11 @@ ohe.45.desc:0 "The Rhineland has denied our demands, and the French have also gu
 ohe.45.a:0 "Declare war anyway!"
 ohe.45.b:0 "Back down, we don't want to risk it..."
 ohe.46.title:0 "The French-Rhenish Defense Alliance"
-ohe.46.desc:0 "Tensions between the East German Union and Rhenish have been increasing drastically over the past several months. Yesterday, French and Rhenish officials declared a formal defense pact with each other. They guarantee to come to each other's aid in the case of an armed conflict."
+ohe.46.desc:0 "Tensions between the East German Workers Union and Rhenish have been increasing drastically over the past several months. Yesterday, French and Rhenish officials declared a formal defense pact with each other. They guarantee to come to each other's aid in the case of an armed conflict."
 ohe.46.a:0 "Hopefully this will deter them."
 ohe.46.b:0 "You can't stop the Workers Revolution!"
 ohe.47.title:0 "A French-Rhenish Alliance?"
-ohe.47.desc:0 "Tensions between the East German Union and Rhenish have been increasing drastically over the past several months. The Rhenish government has come to us stating the Germans are demanding an annexation of their government. The Rhenish are requesting a defensive alliance in order to deter the Germans."
+ohe.47.desc:0 "Tensions between the East German Workers Union and Rhenish have been increasing drastically over the past several months. The Rhenish government has come to us stating the Germans are demanding an annexation of their government. The Rhenish are requesting a defensive alliance in order to deter the Germans."
 ohe.47.a:0 "Hopefully this will deter them."
 ohe.47.b:0 "We have our own problems..."
 ohe.48.title:0 "Bohemia demands Annexation"
@@ -530,8 +530,7 @@ BOH_our_doctrine_is_fine_desc:0 "Other countries like Bavaria have adopted a mot
 BOH_integrate_bavaria:0 "Integrate Bavaria"
 BOH_integrate_pomerania_desc:0 "Now that the Pomeranian civil war is over, we can now fully reintegrate them back into our glorious empire."
 BOH_governmental_reorganization:0 "Governmental Reorganization"
-BOH_proclaim_the_holy_roman_union:0 "Proclaim the Holy Roman Union"
-BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Holy Roman Federation"
+
 BOH_approach_the_commune_of_baden:0 "Approach the Commune of Baden"
 BOH_governmental_reorganization_desc:0 "It's time to reorganize our government, now that we've recovered. Some members of the party think we should completely reorganize our government, calling for a more militaristic state. On the other hand, many support a continuation of the current Marxist government."
 BOH_air_doctrine_experiments:0 "Air Doctrine Experiments"
