Added localization for new events

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -279,7 +279,7 @@ BOH_marxismleninism_desc:0 ""
 BOH_marxism:0 "Marxism"
 BOH_marxism_desc:0 ""
 BOH_approach_pomerania:0 "Approach Brandenburg-Pomerania"
-BOH_approach_pomerania_tooltip:0 "If they accept, we can form the §YEast German Workers Union§!."
+BOH_approach_pomerania_tooltip:0 "If we own §YBrandenburg-Pomerania§!, we can form the §YEast German Workers Union§!."
 BOH_approach_pomerania_desc:0 ""
 BOH_the_bavarian_issue:0 "The Bavarian Issue"
 BOH_the_bavarian_issue_desc:0 ""
@@ -517,6 +517,9 @@ ohe.50.title:0 "Prussia denies Annexation"
 ohe.50.desc:0 "The Prussian military has denied our demands for annexation. Their officials wrote to us saying they will not simply give up their annexation without a fight."
 ohe.50.a:0 "Launch the Prussian Expedition!"
 ohe.50.b:0 "Back down..."
+ohe.51.title:0 "Berlin is under our control!"
+ohe.51.desc:0 "Now that we control Berlin, we can integrate Brandenburg-Pomerania into our country."
+ohe.51.a:0 "Let us declare the §YEast German Workers Union§!!"
 BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
 BOH_proclaim_holy_roman_union:0 "§!§RRequires focus §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
