Added integrate decisions

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -30,8 +30,8 @@
  BOH:0 "Bohemia"
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
-BOH_proclaim_the_holy_roman_union:0 "Proclaim the USRR"
-BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Roman Workers Republics"
+ BOH_proclaim_the_holy_roman_union:0 "Proclaim the USRR"
+ BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Roman Workers Republics"
  BOH_purge_opponents:0 "Purge Opponents"
  BAV_holy_roman_federation:0 "Bavarian RWR"
  BAV_holy_roman_federation_DEF:0 "the Roman Workers Republic of Bavaria"
@@ -563,3 +563,13 @@ BOH_idea_healthcare:0 "Socialist Healthcare System"
 BOH_com_healthcare:0 "Improve Healthcare Standards"
 BOH_com_take_russia:0 "Install a Pro-Soviet Government in Russia"
 BOH_revitalize_soviet_sentiments:0 "Rekindle Soviet Sentiments"
+BOH_integration_decisions:0 "Reintegrating the Republics"
+BOH_integrate_baden:0 "Integrate Baden-Württemberg"
+BOH_integrate_prussia:0 "Integrate Prussia"
+BOH_integrate_hamburg:0 "Integrate Northern Germany"
+BOH_integrate_the_rhine:0 "Integrate the Rhineland"
+BOH_integrate_switzerland:0 "Integrate Switzerland"
+BOH_integrate_savoy:0 "Integrate Savoy"
+BOH_integrate_alsace:0 "Integrate Alsace-Lorraine"
+BOH_integrate_northern_italy:0 "Integrate Northern Italy"
+BOH_integration_decisions_desc:0 "\nThe time has come to integrate the republics into our new centralized government. It will be an expensive task; however, once we've fully completed integration, we will recieve massive benefits to our economy and military."
