Added transitional workers council for Bohemia

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -268,7 +268,7 @@ BOH_end_reconstruction:0 "End Reconstruction"
 BOH_end_reconstruction_desc:0 "After reorganizing and reconstructing our broken economy, we've finally achieved a somewhat stable economy."
 BOH_liquidate_the_capitalist_class:0 "Liquidate the Capitalist Class"
 BOH_idea_marxism_leninism:0 "Marxism–Leninism"
-BOH_idea_marxism:0 "Dictatorship"
+BOH_idea_marxism:0 "Marxism"
 BOH_idea_marxism_leninism_industry:0 "Liquidation of the Capitalist Class"
 BOH_idea_marxism_industry:0 "Seize the Means of Production"
 BOH_seize_production_means:0 "Seize the Means of Production"
