Fixed event localization

--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -279,7 +279,7 @@ BOH_marxismleninism_desc:0 ""
 BOH_marxism:0 "Marxism"
 BOH_marxism_desc:0 ""
 BOH_approach_pomerania:0 "Approach Brandenburg-Pomerania"
-BOH_approach_pomerania_tooltip:0 "If we own §YBrandenburg-Pomerania§!, we can form the §YEast German Workers Union§!."
+BOH_approach_pomerania_tooltip:0 "If we control §YBrandenburg-Pomerania§!, we can form the §YEast German Workers Union§!."
 BOH_approach_pomerania_desc:0 ""
 BOH_the_bavarian_issue:0 "The Bavarian Issue"
 BOH_the_bavarian_issue_desc:0 ""
@@ -397,12 +397,12 @@ ohe.19.title:0 "Pomerania has declined!"
 ohe.19.desc:0 "Shocking news has arrived from Pomerania. They say they will not surrender their independence."
 ohe.19.a:0 "Mobilize against the Pomeranians!"
 ohe.19.b:0 "We accept their decision."
-ohe.20.title:0 "The Bohemians are influencing us!"
-ohe.20.desc:0 "The communists in Bohemia have openly denounced our government. We've also received reports of communist propaganda within our country"
-ohe.20.a:0 "Publicly denounce the Communists"
+ohe.20.title:0 "The [From.Owner.GetAdjective]s are influencing us!"
+ohe.20.desc:0 "The communists in the [From.Owner.GetName] have openly denounced our government. We've also received reports of communist propaganda within our country"
+ohe.20.a:0 "Publicly denounce the [From.Owner.GetAdjective]s"
 ohe.20.b:0 "Launch an investigation into the propaganda"
-ohe.21.title:0 "The Bavarians Respond"
-ohe.21.desc:0 "In response to our propaganda and public denunciation of their government, they have denounced us. They \"exposed\" our propaganda efforts, claiming we're a warmongering state."
+ohe.21.title:0 "Bavaria's Response"
+ohe.21.desc:0 "In response to our propaganda and public denunciation of their government, they have denounced us. They also \"exposed\" our propaganda efforts, claiming we're a warmongering state."
 ohe.21.a:0 "We will not be humiliated on the world stage!"
 ohe.21.b:0 "Cease our Propaganda Efforts and deny their claims."
 ohe.22.title:0 "Our Propaganda Efforts in Bavaria were exposed."
@@ -411,7 +411,7 @@ ohe.22.a:0 "Damn it."
 ohe.23.title:0 "Investigation Results"
 ohe.23.desc:0 "Our investigation into the Bohemian communist propaganda has resulted in success. We found many of the main spies and informants involved and swiftly dealt with them."
 ohe.23.a:0 "Great news!"
-ohe.24.title:0 "Bohemians Respond to our Denunciation"
+ohe.24.title:0 "The [From.Owner.GetAdjective]s Respond to our Denunciation"
 ohe.24.desc:0 "The Bohemians have denied all the accusations we put forth. Our intelligence officiers report that propaganda efforts have practically ended."
 ohe.24.a:0 "At least they stopped spreading propaganda."
 ohe.25.title:0 "Bavarians Accept Ultimatum"
@@ -422,10 +422,10 @@ ohe.26.title:0 "Austria Denies Annexation"
 ohe.26.desc:0 "The Austrian government has rejected the peaceful annexation into the Holy Roman Empire. What should we do?"
 ohe.26.a:0 "Enforce the annexation."
 ohe.26.b:0 "Back down."
-ohe.27.title:0 "Bohemia proposes 'Greater Workers Union' agreement"
-ohe.27.desc:0 "The union workers in Bohemia have come to our government with a proposition, the 'Greater Workers Union' agreement. The agreement will merge all our existing worker unions into a single entity, controlled by both us and the Bohemians."
-ohe.27.a:0 "Accept the agreement"
-ohe.27.b:0 "This practically gives them our industry. Decline the agreement!"
+ohe.27.title:0 "The [From.Owner.GetName] proposes 'Greater Workers Union' agreement"
+ohe.27.desc:0 "The [From.Owner.GetAdjective]s have come to our government with a proposition, the 'Greater Workers Union' agreement. The agreement will merge all our existing worker unions into a single entity, controlled by both us and the Bohemians."
+ohe.27.a:0 "Accept the agreement."
+ohe.27.b:0 "Decline the agreement!"
 ohe.28.title:0 "Baden has agreed!"
 ohe.28.desc:0 "Baden agrees that our nations are stronger united together."
 ohe.28.a:0 "Great!"
@@ -434,8 +434,8 @@ ohe.29.title:0 "Baden has declined!"
 ohe.29.desc:0 "Shocking news has arrived from Baden. They say they will not surrender their independence."
 ohe.29.a:0 "Mobilize against Baden!"
 ohe.29.b:0 "We accept their decision."
-ohe.30.title:0 "A Socialist Union with Bohemia?"
-ohe.30.desc:0 "The Bohemians have come to us with a proposal of a peaceful union between both of our states."
+ohe.30.title:0 "A Socialist Union with the [From.Owner.GetAdjective]s?"
+ohe.30.desc:0 "The [From.Owner.GetAdjective] have come to us with a proposal of a peaceful union between both of our states."
 ohe.30.a:0 "Our nations will prosper united!"
 ohe.30.b:0 "We will not surrender our independence!"
 ohe.31.title:0 "Pomerania has agreed!"
@@ -444,9 +444,9 @@ ohe.31.a:0 "Let us declare the §YEast German Workers Union§!!"
 ohe.32.title:0 "Pomerania has declined!"
 ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
 ohe.32.a:0 "Mobilize against Pomerania!"
-ohe.32.b:0 "Back down..."
-ohe.33.title:0 "Bohemian Workers Union sends ultimatum"
-ohe.33.desc:0 "The Bohemian Workers Union, the centralized worker unions under the control of the Bohemian government, has sent delegates to us. They have laid out demands, including: better worker conditions, better worker rights, and integration into the Bohemian Workers Union."
+ohe.32.b:0 "Respect their decision..."
+ohe.33.title:0 "The [From.Owner.GetName] sends ultimatum"
+ohe.33.desc:0 "The [From.Owner.GetName] has sent delegates to us. They have laid out demands, including: better worker conditions, better worker rights, and integration into the [From.Owner.GetName]."
 ohe.33.a:0 "We have no choice, accept their demands"
 ohe.33.b:0 "We will not surrender our independence!"
 ohe.34.title:0 "Mackensen has agreed!"
@@ -462,7 +462,7 @@ ohe.36.desc:0 "Now that we've established the East German Workers Union, berlin 
 ohe.36.a:0 "Let's move to Berlin."
 ohe.36.b:0 "Let's stay in Prague."
 ohe.37.title:0 "Reunited under Communism"
-ohe.37.desc:0 "We've finally reunited with our old territories. However, the previous system was drastically different than our new communist system. We need to decide how we will manage the new territories."
+ohe.37.desc:0 "We've finally reunited with our old territories. However, the previous system was drastically different from our new communist system. We need to decide how we will manage the new territories."
 ohe.37.a:0 "Proclaim the §YUnion of Socialist Roman Republics§!"
 ohe.37.b:0 "Proclaim the §YRoman Workers Republics§R"
 ohe.38.title:0 "Moving our Capital"
@@ -482,7 +482,7 @@ ohe.41.title:0 "Worker Strikes"
 ohe.41.desc:0 "Reports of widespread strikes struck the news today. It appears they're demanding an improvement in worker conditions and rights; and, some are even protesting our government, calling for a more socialist government."
 ohe.41.a:0 "This will blow over."
 ohe.41.b:0 "Crackdown on strikes."
-ohe.42.title:0 "German Workers demand the Rhineland"
+ohe.42.title:0 "The [From.Owner.GetAdjective]s demand the Rhineland"
 ohe.42.desc:0 "Since our nation's founding, we've always been a heavily industrialized society. The Rhineland consisting of many dense industrial zones, giving us a massive economy. However, the conglomerate of workers in the east have demanded the return of the Rhenish industries. They have also been dropping propaganda pamplets from airplanes for the past couple of weeks now. What will we do?"
 ohe.42.a:0 "Cave to their demands..."
 ohe.42.b:0 "Deny their ultimatum, we will not give up peacefully!"
@@ -499,19 +499,19 @@ ohe.45.desc:0 "The Rhineland has denied our demands, and the French have also gu
 ohe.45.a:0 "Declare war anyway!"
 ohe.45.b:0 "Back down, we don't want to risk it..."
 ohe.46.title:0 "The French-Rhenish Defense Alliance"
-ohe.46.desc:0 "Tensions between the East German Workers Union and Rhenish have been increasing drastically over the past several months. Yesterday, French and Rhenish officials declared a formal defense pact with each other. They guarantee to come to each other's aid in the case of an armed conflict."
+ohe.46.desc:0 "Tensions between the [From.Owner.GetAdjective] and Rhenish governments have been increasing drastically over the past several months. Yesterday, French and Rhenish officials declared a formal defense pact with each other. They guarantee to come to each other's aid in the case of an armed conflict."
 ohe.46.a:0 "Hopefully this will deter them."
 ohe.46.b:0 "You can't stop the Workers Revolution!"
 ohe.47.title:0 "A French-Rhenish Alliance?"
-ohe.47.desc:0 "Tensions between the East German Workers Union and Rhenish have been increasing drastically over the past several months. The Rhenish government has come to us stating the Germans are demanding an annexation of their government. The Rhenish are requesting a defensive alliance in order to deter the Germans."
+ohe.47.desc:0 "Tensions between the [From.Owner.GetAdjective] and Rhenish governments have been increasing drastically over the past several months. The Rhenish government has come to us stating the Germans are demanding an annexation of their government. The Rhenish are requesting a defensive alliance in order to deter the Germans."
 ohe.47.a:0 "Hopefully this will deter them."
 ohe.47.b:0 "We have our own problems..."
-ohe.48.title:0 "Bohemia demands Annexation"
-ohe.48.desc:0 "The Bohemians sent a message to us demanding our peaceful annexation. They do have a substantial amount of influence in our country, what should we say?"
+ohe.48.title:0 "The [From.Owner.GetAdjective]s demand Annexation"
+ohe.48.desc:0 "The [From.Owner.GetAdjective]s have sent a message to us demanding our peaceful annexation. They do have a substantial amount of influence in our country, what should we say?"
 ohe.48.a:0 "Accept their demands..."
 ohe.48.b:0 "We will fight to the end!"
 ohe.49.title:0 "Prussia accepts Annexation"
-ohe.49.desc:0 "To our suprise, the Prussian military have accepted annexation. Their officials wrote to us saying they do not want to cause unnecessary blodshed."
+ohe.49.desc:0 "To our suprise, the Prussian military has accepted annexation. Their officials wrote to us saying they do not want to cause unnecessary blodshed."
 ohe.49.a:0 "Great!"
 ohe.50.title:0 "Prussia denies Annexation"
 ohe.50.desc:0 "The Prussian military has denied our demands for annexation. Their officials wrote to us saying they will not simply give up their annexation without a fight."
@@ -520,6 +520,9 @@ ohe.50.b:0 "Back down..."
 ohe.51.title:0 "Berlin is under our control!"
 ohe.51.desc:0 "Now that we control Berlin, we can integrate Brandenburg-Pomerania into our country."
 ohe.51.a:0 "Let us declare the §YEast German Workers Union§!!"
+ohe.52.title:0 "The [From.Owner.GetName] demands Annexation"
+ohe.52.desc:0 "Now that we control Berlin, we can integrate Brandenburg-Pomerania into our country."
+ohe.52.a:0 "Let us declare the §YEast German Workers Union§!!"
 BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
 BOH_proclaim_holy_roman_union:0 "§!§RRequires focus §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
