--- a/localisation/BOH_l_english.yml
+++ b/localisation/BOH_l_english.yml
@@ -10,49 +10,52 @@
  BOH_holy_roman_union:0 "Union of Socialist Roman Republics"
  BOH_holy_roman_union_DEF:0 "the Union of Socialist Roman Republics"
  BOH_holy_roman_union_ADJ:0 "Roman"
- BOH_holy_roman_federation:0 "Roman Workers Republic of Bohemia"
- BOH_holy_roman_federation_DEF:0 "the Roman Workers Republic of Bohemia"
+ BOH_holy_roman_federation:0 "Roman Workers' Republic of Bohemia"
+ BOH_holy_roman_federation_DEF:0 "the Roman Workers' Republic of Bohemia"
  BOH_holy_roman_federation_ADJ:0 "Bohemian"
- BOH_marxism_n:0 "Workers Union of Bohemia"
- BOH_marxism_n_DEF:0 "the Workers Union of Bohemia"
+ BOH_marxism_n:0 "Workers' Union of Bohemia"
+ BOH_marxism_n_DEF:0 "the Workers' Union of Bohemia"
  BOH_marxism_n_ADJ:0 "Bohemian"
- BOH_marxism_leninism:0 "Bohemian SRR"
- BOH_marxism_leninism_DEF:0 "the Socialist Roman Republic of Bohemia"
+ BOH_marxism_leninism:0 "Socialist Republic of Bohemia"
+ BOH_marxism_leninism_DEF:0 "the Socialist Republic of Bohemia"
  BOH_marxism_leninism_ADJ:0 "Bohemian"
- BOH_com_east_germany:0 "East German Workers Union"
- BOH_com_east_germany_n_DEF:0 "the East German Workers Union"
+ BOH_com_east_germany:0 "East German Union"
+ BOH_com_east_germany_DEF:0 "the East German Union"
+ BOH_com_east_germany_ADJ:0 "East German"
+ BOH_com_east_germany2:0 "East German Socialist Republic"
+ BOH_com_east_germany2_DEF:0 "the East German Socialist Republic"
+ BOH_com_east_germany2_ADJ:0 "East German"
  BOH_fascism_ADJ:0 "Bohemian"
  BOH_democratic_ADJ:0 "Bohemian"
  BOH_neutrality_ADJ:0 "Bohemian"
  BOH_communism_ADJ:0 "Bohemian"
  BOH_coastal_forts:0 "Coastal Fortification Effort"
- BOH_com_east_germany_ADJ:0 "East German"
  BOH:0 "Bohemia"
  BOH_DEF:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
  BOH_proclaim_the_holy_roman_union:0 "Proclaim the USRR"
- BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Roman Workers Republics"
+ BOH_proclaim_the_holy_roman_federation:0 "Proclaim the Roman Workers' Republics"
  BOH_purge_opponents:0 "Purge Opponents"
  BAV_holy_roman_federation:0 "Bavarian RWR"
- BAV_holy_roman_federation_DEF:0 "the Roman Workers Republic of Bavaria"
+ BAV_holy_roman_federation_DEF:0 "the Roman Workers' Republic of Bavaria"
  BAV_holy_roman_federation_ADJ:0 "Bavarian"
  BAD_holy_roman_federation:0 "RWR of Baden-Württemberg"
- BAD_holy_roman_federation_DEF:0 "the Roman Workers Republic of Baden-Württemberg"
+ BAD_holy_roman_federation_DEF:0 "the Roman Workers' Republic of Baden-Württemberg"
  BAD_holy_roman_federation_ADJ:0 "Badisch-Württembergisch"
  TRC_holy_roman_federation:0 "Rhenish RWR"
- TRC_holy_roman_federation_DEF:0 "the Roman Workers Republic of the Rhine"
+ TRC_holy_roman_federation_DEF:0 "the Roman Workers' Republic of the Rhine"
  TRC_holy_roman_federation_ADJ:0 "Rhenish"
  NTE_holy_roman_federation:0 "North German RWR"
- NTE_holy_roman_federation_DEF:0 "the Roman Workers Republic of the North Germany"
+ NTE_holy_roman_federation_DEF:0 "the Roman Workers' Republic of the North Germany"
  NTE_holy_roman_federation_ADJ:0 "North German"
  TPR_holy_roman_federation:0 "Brandenburg-Pomeranian RWR"
- TPR_holy_roman_federation_DEF:0 "the Roman Workers Republic of the Brandenburg-Pomerania"
+ TPR_holy_roman_federation_DEF:0 "the Roman Workers' Republic of the Brandenburg-Pomerania"
  TPR_holy_roman_federation_ADJ:0 "Brandenburg-Pomeranian"
  PRS_holy_roman_federation:0 "Prussian RWR"
- PRS_holy_roman_federation_DEF:0 "the Roman Workers Republic of the Prussia"
+ PRS_holy_roman_federation_DEF:0 "the Roman Workers' Republic of the Prussia"
  PRS_holy_roman_federation_ADJ:0 "Prussian"
  AUS_holy_roman_federation:0 "Austrian RWR"
- AUS_holy_roman_federation_DEF:0 "the Roman Workers Republic of the Austria"
+ AUS_holy_roman_federation_DEF:0 "the Roman Workers' Republic of the Austria"
  AUS_holy_roman_federation_ADJ:0 "Austrian"
 BOH_purge_opponents_desc:0 "While we did win the civil war, pro-Kaiser resistance groups still operate within our borders. We must find them and stop them from sabotaging our industries, and stop them from potentially trying to overthrow our government."
 BOH_our_doctrine_is_fine:0 "Our Doctrine Is Fine"
@@ -322,7 +325,7 @@ BOH_demand_prussia:0 "The Prussian Expedition"
 bohemian_communist_propaganda:0 "Bohemian Communist Propaganda"
 bohemian_communist_propaganda_desc:0 "The Bohemians are spreading communist propaganda throughout our country!"
 BOH_has_marxism:0 "§!§!Your country's name will change to §YWorkers Union of Bohemia§!."
-BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YSocialist Roman Republic of Bohemia§!."
+BOH_has_marxism_leninism:0 "§!§!Your country's name will change to §YSocialist Republic of Bohemia§!."
 BOH_com_political_reforms_focus:0 "Political Reforms"
 BOH_reopening_our_economy_focus:0 "Reopen our economy"
 ohe.1.title:0 "Kaiser Influence"
@@ -440,7 +443,8 @@ ohe.30.a:0 "Our nations will prosper united!"
 ohe.30.b:0 "We will not surrender our independence!"
 ohe.31.title:0 "Pomerania has agreed!"
 ohe.31.desc:0 "Pomerania agrees that a greater union between our countries will lead to better conditions in both our countries."
-ohe.31.a:0 "Let us declare the §YEast German Workers Union§!!"
+ohe.31.a:0 "Let us declare the §YEast German Socialist Republic§!!"
+ohe.31.b:0 "Let us declare the §YEast German Union§!!"
 ohe.32.title:0 "Pomerania has declined!"
 ohe.32.desc:0 "Shocking news has arrived from Pomerania. They do not want to form a greater union together."
 ohe.32.a:0 "Mobilize against Pomerania!"
@@ -521,8 +525,12 @@ ohe.51.title:0 "Berlin is under our control!"
 ohe.51.desc:0 "Now that we control Berlin, we can integrate Brandenburg-Pomerania into our country."
 ohe.51.a:0 "Let us declare the §YEast German Workers Union§!!"
 ohe.52.title:0 "The [From.Owner.GetName] demands Annexation"
-ohe.52.desc:0 "Now that we control Berlin, we can integrate Brandenburg-Pomerania into our country."
-ohe.52.a:0 "Let us declare the §YEast German Workers Union§!!"
+ohe.52.desc:0 "The [From.Owner.GetAdjective]s demand we lay our arms down and surrender to them peacefully, or else they will invade us."
+ohe.52.a:0 "Better red than dead..."
+ohe.52.b:0 "We won't go down without a fight!"
+ohe.53.title:0 "Annexation of Austria"
+ohe.53.desc:0 "The Austrian government has agreed to our demand of annexation."
+ohe.53.a:0 "Great!"
 BOH_french_intervention:0 "§!§RThis focus may spark §YFrench§R intervention!§!§!§!§!"
 BOH_proclaim_holy_roman_union:0 "§!§RRequires focus §YMarxism-Leninism§!§!§!."
 BOH_proclaim_holy_roman_union2:0 "§!§!You will recieve decisions to integrate §YHoly Roman§! core states§!§!."
@@ -552,7 +560,7 @@ BOH_annex_baden:0 "Annex the Baden Commune"
 BOH_com_italy:0 "Eliminate Fascism in Italy"
 BOH_com_switzerland:0 "Liberate Swiss Workers"
 BOH_com_austria:0 "Demand the Annexation of Austria"
-BOH_com_foreign_policy:0 "Focus on our Foreign Policy"
+BOH_exporting_the_revolution:0 "Exporting the Revolution"
 BOH_com_internal_policy:0 "Focus on our Domestic Policy"
 BOH_reorganize_labor_plans:0 "Reorganize Labor Plans"
 BOH_improve_education:0 "Improve our School System"
