--- a/localisation/dual_leaders_l_english.yml
+++ b/localisation/dual_leaders_l_english.yml
@@ -5,13 +5,25 @@
  dual_leader_name:0 "[ROOT.GetDualLeaderName]"
  DEFAULT_TITLE:0 "Vacant"
  DEFAULT_FIRST_TITLE:0 "Leader"
- DESCRIPTION_TEST:0 "His Majesty"
  second_leader_tt:0 "§Y[ROOT.GetDualLeaderName]§!"
  first_leader_diplo_tt:0 "§Y[From.GetLeader]§!\n[From.GetFirstTitle] of [From.GetNameDef]"
  second_leader_diplo_tt:0 "§Y[From.GetDualLeaderName]§!\n[From.GetSecondTitle] of [From.GetNameDef]"
  dual_leader_desc_tt:0 "§g[From.GetDualLeaderDesc]§!"
  first_leader_desc_tt:0 "§g[From.GetFirstLeaderDesc]§!"
     # Nation Specific Localisation
+ ENG_PRIME_MINISTER_TITLE:0 "Prime Minister"
+ ENG_KING_TITLE:0 "Monarch"
+ ENG_GEORGE_V:0 "George V"
+ ENG_GEORGE_V_DESC:0 "His Majesty"
+ ROM_PRIME_MINISTER_TITLE:0 "Prime Minister"
+ ROM_MONARCH_TITLE:0 "Monarch"
+ ROM_CAROL_II:0 "Carol II"
+ BOH_COMMUNIST_TITLE:0 "Provisional Government"
+ BOH_MARXIST_LENINIST_TITLE:0 "General Secretary"
  BOH_CHANCELLOR_TITLE:0 "Chancellor"
+ BOH_CHANCELLOR_DESC:0 "Chancellor"
  BOH_MONARCH_TITLE:0 "Kaiser"
+ BOH_MONARCH_DESC:0 "Kaiser"
  BOH_OTTO:0 "Otto von Hapsburg"
+ BOH_GOTTWALD:0 "Klement Gottwald"
+ BOH_SLANSKY:0 "Rudolf Slánský"
