started reworking fascist path

--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2648,8 +2648,10 @@
  PRS_gymnastics_and_sports_division:0 "Gymnastics and Sports Division"
  PRS_gymnastics_and_sports_division_desc:0 "The SA have used their previous training as The Gymnastics and Sports Division to increase their effectiveness on the battlefield."
  BOH_a_fragmented_empire:0 "A Fragmented Empire"
- BOH_a_fragmented_empire_desc:0 "With the collapse of our great empire, there was much instability, that damaged our economy, and our government as a whole."
+ BOH_a_fragmented_empire_desc:0 "With the collapse of the great empire, there was much instability, that damaged our economy, and our government as a whole."
  NTE_lack_of_defensive_planning:0 "Lack of Defensive Planning"
  NTE_lack_of_defensive_planning_desc:0 "It has come to our attention that we lack the detailed planning and resources to fight a successful defensive war, we must ensure that we do not have to face an attacker without extensive planning and preparation or simply preparing for one in advance."
  BOH_the_rightful_empire:0 "The Rightful Empire"
  BOH_the_rightful_empire_desc:0 "We are the heirs of the great Holy Roman Empire, and all of the soldiers loyal to the Kaiser will help enact his will of reuniting the empire!"
+ BOH_idea_fascism:0 "Fascist Leanings"
+ BOH_idea_fascism_desc:0 "Fascist leanings in the government."
